Canvis i Afegits en Estructures de DadesObertes https://github.com/GovernIB/pluginsib-utils/issues/8
